# skylab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
skylab/: __main__.py  api.py  launch_api.py  main.py  settings.py  skylab.py
skylab/css/: styles.css
skylab/models/: event_models.py  launch_models.py
skylab/widgets/: event_widget.py  launch_widget.py  time_widget.py
tests/: test_api.py  test_models.py  test_skylab.py
