[tool.poetry]
name = "skylab"
version = "0.1.0"
description = ""
authors = ["SerhiiStets <stets.serhii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
textual = {extras = ["dev"], version = "^0.19.1"}
requests = "^2.28.2"
pydantic = "^1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
