[tool.poetry]
name = "skylab"
version = "0.1.0"
description = "A TUI for showing latest upcomming rocket launches."
authors = ["SerhiiStets <stets.serhii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
textual = {extras = ["dev"], version = "^0.19.1"}
pydantic = "^1.10.7"
tzlocal = "^4.3"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skylab = "skylab.__main__:main"


[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
py_version = 39
