[tool.poetry]
name = "skylab"
version = "0.1.2"
description = "A TUI for showing latest upcoming rocket launches."
authors = ["SerhiiStets <stets.serhii@gmail.com>"]
license = "MIT"
readme = "README.md"
repository="https://github.com/SerhiiStets/skylab"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
textual = {extras = ["dev"], version = "^0.19.1"}
pydantic = "^1.10.7"
tzlocal = "^4.3"
requests = "^2.28.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skylab = "skylab.__main__:main"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
py_version = 39
